[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Datetime/Datetime.gd" type="Script" id=1]

[node name="Datetime" type="VBoxContainer"]
margin_right = 698.0
margin_bottom = 196.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSetting" type="HBoxContainer" parent="."]
margin_right = 698.0
margin_bottom = 45.0
alignment = 1

[node name="Label" type="Label" parent="TimeSetting"]
margin_top = 10.0
margin_right = 152.0
margin_bottom = 35.0
text = "Time of day: 0"
align = 2

[node name="TimeSlider" type="HSlider" parent="TimeSetting"]
margin_left = 160.0
margin_right = 460.0
margin_bottom = 45.0
rect_min_size = Vector2( 300, 32 )
hint_tooltip = "Time"
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 24.0
step = 0.5
value = 12.0
tick_count = 13
ticks_on_borders = true

[node name="Label2" type="Label" parent="TimeSetting"]
margin_left = 468.0
margin_top = 10.0
margin_right = 494.0
margin_bottom = 35.0
text = "24"
align = 2

[node name="SpinBox" type="SpinBox" parent="TimeSetting"]
margin_left = 502.0
margin_right = 698.0
margin_bottom = 45.0
max_value = 24.0
step = 0.25
value = 12.0
suffix = "h"

[node name="SeasonSetting" type="HBoxContainer" parent="."]
margin_top = 53.0
margin_right = 698.0
margin_bottom = 98.0
alignment = 1

[node name="Label" type="Label" parent="SeasonSetting"]
margin_top = 10.0
margin_right = 148.0
margin_bottom = 35.0
text = "Day of year: 0"
align = 2

[node name="DaySlider" type="HSlider" parent="SeasonSetting"]
margin_left = 156.0
margin_right = 447.0
margin_bottom = 45.0
rect_min_size = Vector2( 128, 32 )
hint_tooltip = "Time"
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 364.0
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="SeasonSetting"]
margin_left = 455.0
margin_top = 10.0
margin_right = 494.0
margin_bottom = 35.0
text = "365"
align = 2

[node name="SpinBox" type="SpinBox" parent="SeasonSetting"]
margin_left = 502.0
margin_right = 698.0
margin_bottom = 45.0
max_value = 365.0
suffix = "d"

[node name="YearSetting" type="HBoxContainer" parent="."]
margin_top = 106.0
margin_right = 698.0
margin_bottom = 151.0
alignment = 1

[node name="Label" type="Label" parent="YearSetting"]
margin_top = 10.0
margin_right = 113.0
margin_bottom = 35.0
text = "Year: 2000"
align = 2

[node name="YearSlider" type="HSlider" parent="YearSetting"]
margin_left = 121.0
margin_right = 434.0
margin_bottom = 45.0
rect_min_size = Vector2( 128, 32 )
hint_tooltip = "Time"
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2000.0
max_value = 2022.0
value = 2022.0
tick_count = 23
ticks_on_borders = true

[node name="Label2" type="Label" parent="YearSetting"]
margin_left = 442.0
margin_top = 10.0
margin_right = 494.0
margin_bottom = 35.0
text = "2022"
align = 2

[node name="SpinBox" type="SpinBox" parent="YearSetting"]
margin_left = 502.0
margin_right = 698.0
margin_bottom = 45.0
min_value = 2000.0
max_value = 2022.0
value = 2022.0
suffix = "Y"

[node name="ConfirmButton" type="Button" parent="."]
margin_top = 159.0
margin_right = 698.0
margin_bottom = 196.0
text = "Confirm"
